# Comp_Chem

./: README.md
CV/: main.tex  pub.tex
Cheminformatics/: ChEMBL_bemisMurko_clusters.py  ChEMBL_cluster_framework.py  ChEMBL_fingerprint_clusters.py  ChEMBL_histogram_viewer.py  ChEMBL_success_rates.py  PDB_parser.py  analog_similarity.py  analog_submit.slurm  submit.slurm
Cheminformatics/AlphaFold/: alphafold_array_chpc.slurm  biosensor_PDB_align.py  json_combi_mods.py  json_linker_mods.py  run_pymol_align.sh
Cheminformatics/Analogs/: Analog_Generator.py  Analog_Generator_Dev.py  Analog_Methods.py  Analogs.py  Extract_Best_Smiles.py  Gradient_Descent.py  README.md  analog_methods.py  analogs.py  fix_broken_zinc.py  ligand_analog_curves.py  ligand_analog_statistics.py  make_tarballs.bash  smi_filter.py
Cheminformatics/Boltz/: yaml_linker_mods.py
Cheminformatics/ChEMBL/: ChEMBL_SQL_queries.py  (+5 more)
Molecular_Dynamics/: Solvate.sh
Molecular_Dynamics/CHARMM/gro_to_Drude/: LICENSE  README.md  gui_editor.spec  pyproject.toml
Molecular_Dynamics/CHARMM/gro_to_Drude/grocharmm/: gro_to_crd.py  gro_to_psf.py  utils.py
Molecular_Dynamics/CHARMM/gro_to_Drude/scripts/: __init__.py  gui_editor.py
Molecular_Dynamics/CHARMM/gro_to_Drude/tests/: test_crd.py  test_psf.py  test_psf_editor.py  test_real.py  test_replace.py  test_segment_numbers.py
QM/: LibGen.pl  dir_gen.pl  gauss_lib_gen.pl
biosensor_ml/: encode_linkers.py
pymol_plugins/: centroid.py  subsequence_motif.py
water_slabs/: cool_analysis.cpptraj  plot_slab_density.py  plot_slab_dipole.py  warm_analysis.cpptraj
(+180 files in other folders)
